# python-project-lvl2

./: .coverage  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: linter.yml
differences/: __init__.py  __init__.py,cover  gendiff.py
differences/kernel/: __init__.py  __init__.py,cover  engine.py  engine.py,cover  gendiff.py  read_file.py  read_file.py,cover
differences/scripts/: __init__.py  __init__.py,cover  gendiff.py  gendiff.py,cover
differences/tests/: test_engine.py  test_engine.py,cover  test_read_file.py  test_read_file.py,cover
differences/tests/fixtures/: file_4.json  file_output_1.txt  result_diff2list.py  result_diff2list.py,cover  result_sorting_to_list.py  result_sorting_to_list.py,cover  result_to_string_test.py  result_to_string_test.py,cover
