[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["belousovsergey56 <belousovsergej56@gmail.com>"]
packages = [
{include = "differences"},
]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.3"
pytest-cov = "^2.11.1"
coverage = "^5.5"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff="differences.scripts.gendiff:main"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    # note the use of single quote below to denote "raw" strings in TOML
    'ignore:function ham\(\) is deprecated:DeprecationWarning',
]